--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,10 +1,16 @@
 plugins {
     id 'com.android.application'
+    id 'com.google.gms.google-services'
 }
 
 android {
     compileSdkVersion 30
     buildToolsVersion "30.0.3"
+
+    buildFeatures {
+        viewBinding true
+        dataBinding true
+    }
 
     defaultConfig {
         applicationId "com.reactive.fyp"
@@ -32,6 +38,9 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'com.google.android.material:material:1.3.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
+    implementation 'com.google.firebase:firebase-database:19.7.0'
+    implementation 'com.google.firebase:firebase-storage:19.2.2'
+    implementation 'com.google.firebase:firebase-auth:20.0.4'
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
@@ -39,4 +48,20 @@ dependencies {
     implementation 'com.github.avinashkolluru.colorpickerseekbar:library:1.0-SNAPSHOT'
 
     implementation 'com.github.yukuku:ambilwarna:2.0.1'
+
+    implementation 'com.isseiaoki:simplecropview:1.1.8'
+
+    implementation "com.github.hotchemi:permissionsdispatcher:$permissionsDispatcherVersion"
+    annotationProcessor "com.github.hotchemi:permissionsdispatcher-processor:$permissionsDispatcherVersion"
+
+    //Circular ImageView
+    implementation 'de.hdodenhof:circleimageview:3.1.0'
+
+    //Responsiveness
+    implementation 'com.intuit.sdp:sdp-android:1.0.6'
+
+
+    //Glide
+    implementation 'com.github.bumptech.glide:glide:4.12.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'
 }
