--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     package="com.reactive.fyp">
 
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -10,18 +13,20 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.FYP"
-        tools:replace="android:icon"
-        >
-        <activity android:name=".Activities.testActivity">
-        </activity>
-        <activity android:name=".Activities.DesignActivity">
+        tools:replace="android:icon">
+        <activity android:name=".Activities.ProfileActivity"></activity>
+        <activity android:name=".Activities.testActivity"></activity>
+        <activity android:name=".Activities.DesignActivity" />
+        <activity android:name=".MainActivity" />
+        <activity android:name=".Activities.SignInActivitye">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".MainActivity" />
+        <activity android:name=".Activities.RegisterActivity" />
+        <activity android:name=".Activities.ImageViewActivity"/>
     </application>
 
 </manifest>
