--- a/build.gradle
+++ b/build.gradle
@@ -7,6 +7,7 @@ buildscript {
     }
     dependencies {
         classpath "com.android.tools.build:gradle:4.1.2"
+        classpath 'com.google.gms:google-services:4.3.5'
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -22,6 +23,14 @@ allprojects {
             url 'https://oss.sonatype.org/content/repositories/snapshots'
         }
     }
+}
+
+ext {
+    permissionsDispatcherVersion = '2.4.0'
+    supportLibraryVersion = '28.0.0-rc02'
+    rxPermissionsVersion = '0.9.4@aar'
+    rxJavaVersion = '2.1.10'
+    rxAndroidVersion = '2.0.2'
 }
 
 task clean(type: Delete) {
