--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,15 +14,14 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.FYP"
         tools:replace="android:icon">
-        <activity android:name=".Activities.EditprofileActivity"></activity>
+        <activity android:name=".Activities.OrderActivity"></activity>
+        <activity android:name=".Activities.EditprofileActivity" />
         <activity android:name=".Activities.CheckOutActivity" />
-        <activity android:name=".Activities.HomeActivity">
-
-        </activity>
+        <activity android:name=".Activities.HomeActivity"></activity>
         <activity android:name=".Activities.ProfileActivity" />
         <activity android:name=".Activities.testActivity" />
         <activity android:name=".Activities.DesignActivity" />
-        <activity android:name=".MainActivity" >
+        <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
