--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,18 +8,18 @@
 
     <application
         android:allowBackup="true"
+        android:hardwareAccelerated="true"
         android:icon="@drawable/shirtlogo"
         android:label="@string/app_name"
         android:roundIcon="@drawable/shirtlogo"
         android:supportsRtl="true"
         android:theme="@style/Theme.FYP"
-        tools:replace="android:icon"
-        android:hardwareAccelerated="true"
-        >
-        <activity android:name=".Activities.OrderActivity"></activity>
+        tools:replace="android:icon">
+        <activity android:name=".Activities.AboutActivity"></activity>
+        <activity android:name=".Activities.OrderActivity" />
         <activity android:name=".Activities.EditprofileActivity" />
         <activity android:name=".Activities.CheckOutActivity" />
-        <activity android:name=".Activities.HomeActivity"></activity>
+        <activity android:name=".Activities.HomeActivity" />
         <activity android:name=".Activities.ProfileActivity" />
         <activity android:name=".Activities.testActivity" />
         <activity android:name=".Activities.DesignActivity" />
